--- a/CV-creator/src/App.css
+++ b/CV-creator/src/App.css
@@ -28,10 +28,11 @@ body{
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .form-group {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.95rem;
 }
 
 label {
