--- a/CV-creator/src/App.css
+++ b/CV-creator/src/App.css
@@ -21,7 +21,7 @@ body{
   max-width: 600px;
   margin: 0 auto;
   background-color: #e6e4e4;
-  padding: 50px;
+  padding: 32px;
 }
 
 .form-title {
@@ -63,5 +63,25 @@ label {
 }
 
 .submit-button:hover {
+  background-color: #0056b3;
+}
+.delete-button,
+.add-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  margin-top: 1rem; 
+  width: 100%;
+}
+.delete-button{
+  background-color: red;
+}
+.delete-button:hover{
+  background-color: rgb(218, 18, 18);
+}
+.add-button:hover {
   background-color: #0056b3;
 }
