--- a/CV-creator/src/App.css
+++ b/CV-creator/src/App.css
@@ -97,6 +97,22 @@ label {
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
+  position: absolute;
+  width: 540px;
+  height: 80vh;
+  top: 20px;
+  z-index: 100;
+}
+.overlay{
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  width: 100%;
+  height: 2200px;
+  top:0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
 }
 
 .personal-info {
@@ -122,7 +138,7 @@ strong {
 }
 
 .photo-section {
-  margin-left: 20px; /* Dodajte potreban razmak između teksta i fotografije */
+  margin-left: 20px; 
 }
 
 img {
@@ -155,4 +171,17 @@ p {
 
 .delete-button:hover {
   background-color: #da190b;
+}
+.custom-btn {
+  padding: 10px 20px;
+  margin-right: 10px; 
+  background-color: #007bff; 
+  color: #fff;
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+}
+
+.custom-btn:hover {
+  background-color: #0056b3; 
 }
