--- a/CV-creator/src/App.css
+++ b/CV-creator/src/App.css
@@ -97,17 +97,15 @@ label {
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
-  position: absolute;
+  position: fixed;
   width: 540px;
-  height: 80vh;
   top: 20px;
+  bottom: 0;
   z-index: 100;
 }
 .overlay{
   background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  width: 100%;
-  height: 2200px;
+  position: fixed;
   top:0;
   left: 0;
   bottom: 0;
@@ -122,6 +120,7 @@ label {
 h2 {
   margin-top: 0;
   margin-bottom: 10px;
+  color: blue;
 }
 
 strong {
@@ -180,8 +179,15 @@ p {
   border: none; 
   border-radius: 5px; 
   cursor: pointer; 
+  font-size: 20px;
 }
 
 .custom-btn:hover {
   background-color: #0056b3; 
+}
+.btn-container{
+  background-color: rgb(245, 242, 242);
+  margin-top: 25%;
+  display: flex;
+  justify-content: space-between;
 }
