--- a/CV-creator/src/App.css
+++ b/CV-creator/src/App.css
@@ -102,6 +102,7 @@ label {
   top: 20px;
   bottom: 0;
   z-index: 100;
+  overflow-y: scroll;
 }
 .overlay{
   background-color: rgba(0, 0, 0, 0.5);
@@ -187,7 +188,14 @@ p {
 }
 .btn-container{
   background-color: rgb(245, 242, 242);
-  margin-top: 25%;
+  margin-top: 10%;
   display: flex;
   justify-content: space-between;
+}
+.profile-img{
+  width: 200px;
+  height: 180px;
+  position: absolute;
+  right: 14px;
+  border: 1px solid black;
 }
